feat: implement dynamic background image system
- Replace static CSS background-image declarations with dynamic JavaScript solution
- Create imageUtils.js with responsive image loading and fallback logic
- Move project images to public directory for proper serving
- Update Portfolio component to use dynamic inline styles instead of CSS classes
- Remove 198 lines of static CSS from applications.css
- Fix image path resolution to work with Vite's base path configuration
- Add intelligent fallbacks for missing images at different screen sizes
- Maintain responsive behavior (sm/md/lg) based on window width
- Resolve initialization errors and 404 image loading issues

Benefits:
- No more manual CSS updates when adding/removing projects
- Automatic responsive image selection with fallbacks
- Cleaner, more maintainable codebase
- Better performance with dynamic loading

--- a/src/assets/css/applications.css
+++ b/src/assets/css/applications.css
@@ -1,198 +1,6 @@
-/* palette      frontend            backend             fullstack  
-    red                             artist-ouvre        fitness-logbook
-    orange      sun-tracker           
-    yellow      caesar-cipher 
-    green       ratio-calculator 
-    blue        bluestrawberry 
-    violet      password-generator  
-    black       coding-quiz         readme-generator
-    white       escowinart          meal-prep
-*/
-
-
-#artist-oeuvre {
-    background-image: url('../../assets/img/sm/artist-oeuvre.jpg');
-}
-
-#bluestrawberry {
-    background-image: url('../../assets/img/sm/bluestrawberry.jpg');
-}
-
-#caesar-cipher {
-    background-image: url('../../assets/img/sm/caesar-cipher.jpg');
-}
-
-#crewssignment {
-    background-image: url('../../assets/img/sm/crewssignment.png');
-}
-
-#escowinart {
-    background-image: url('../../assets/img/sm/escowinart.jpg');
-}
-
-#fitness-logbook {
-    background-image: url('../../assets/img/sm/fitness-logbook.jpg');
-}
-
-#job-tracker {
-    background-image: url('../../assets/img/md/job-tracker.jpg');
-}
-
-#meal-prep {
-    background-image: url('../../assets/img/sm/meal-prep.jpg');
-}
-
-#pi-server {
-    background-image: url('../../assets/img/sm/pi-server.png');
-}
-
-#ratio-calculator {
-    background-image: url('../../assets/img/sm/ratio-calculator.jpg');
-}
-
-#readme-generator {
-    background-image: url('../../assets/img/sm/readme-generator.jpg');
-}
-
-#rowcalibur {
-    background-image: url('../../assets/img/lg/rowcalibur.png');
-}
-
-#stroke-rate {
-    background-image: url('../../assets/img/lg/stroke-rate.png');
-}
-
-#sun-tracker {
-    background-image: url('../../assets/img/lg/sun-tracker.jpg');
-}
-
-#unit-converter {
-    background-image: url('../../assets/img/sm/unit-converter.jpg');
-}
-
-#wireframe-blueprint {
-    background-image: url('../../assets/img/sm/wireframe-blueprint.png');
-}
-
-@media screen and (min-width: 768px) {
-
-    /* screenshots | solo */
-    #bluestrawberry {
-        background-image: url('../../assets/img/md/bluestrawberry.jpg');
-    }
-
-    #caesar-cipher {
-        background-image: url('../../assets/img/md/caesar-cipher.jpg');
-    }
-
-    #crewssignment {
-        background-image: url('../../assets/img/md/crewssignment.png');
-    }
-
-    #escowinart {
-        background-image: url('../../assets/img/md/escowinart.jpg');
-    }
-
-    #fitness-logbook {
-        background-image: url('../../assets/img/md/fitness-logbook.jpg');
-    }
-
-    #job-tracker {
-        background-image: url('../../assets/img/md/job-tracker.jpg');
-    }
-
-    #meal-prep {
-        background-image: url('../../assets/img/md/meal-prep.jpg');
-    }
-
-    #pi-server {
-        background-image: url('../../assets/img/md/pi-server.png');
-    }
-
-    #ratio-calculator {
-        background-image: url('../../assets/img/md/ratio-calculator.jpg');
-    }
-
-    #readme-generator {
-        background-image: url('../../assets/img/md/readme-generator.jpg');
-    }
-
-    #sun-tracker {
-        background-image: url('../../assets/img/md/sun-tracker.jpg');
-    }
-
-    #unit-converter {
-        background-image: url('../../assets/img/md/unit-converter.jpg');
-    }
-
-    #wireframe-blueprint {
-        background-image: url('../../assets/img/md/wireframe-blueprint.png');
-    }
-
-}
-
-@media screen and (min-width: 1024px) {
-
-    /* screenshots | solo */
-    #bluestrawberry {
-        background-image: url('../../assets/img/lg/bluestrawberry.jpg');
-    }
-
-    #caesar-cipher {
-        background-image: url('../../assets/img/lg/caesar-cipher.jpg');
-    }
-
-    #crewssignment {
-        background-image: url('../../assets/img/lg/crewssignment.png');
-    }
-
-    #pi-server {
-        background-image: url('../../assets/img/lg/pi-server.jpg');
-    }
-
-    #escowinart {
-        background-image: url('../../assets/img/lg/escowinart.jpg');
-    }
-
-    #fitness-logbook {
-        background-image: url('../../assets/img/lg/fitness-logbook.jpg');
-    }
-
-    /* highlighted fullstack project */
-    #job-tracker {
-        background-image: url('../../assets/img/lg/job-tracker.jpg');
-    }
-
-    #meal-prep {
-        background-image: url('../../assets/img/lg/meal-prep.jpg');
-    }
-
-    #pi-server {
-        background-image: url('../../assets/img/lg/pi-server.png');
-    }
-
-    #ratio-calculator {
-        background-image: url('../../assets/img/lg/ratio-calculator.jpg');
-    }
-
-    #readme-generator {
-        background-image: url('../../assets/img/md/readme-generator.jpg');
-    }
-
-    #stroke-rate {
-        background-image: url('../../assets/img/lg/stroke-rate.png');
-    }
-
-    #sun-tracker {
-        background-image: url('../../assets/img/lg/sun-tracker.jpg');
-    }
-
-    #unit-converter {
-        background-image: url('../../assets/img/lg/unit-converter.jpg');
-    }
-
-    #wireframe-blueprint {
-        background-image: url('../../assets/img/lg/wireframe-blueprint.png');
-    }
-
-}
+/* 
+ * Dynamic background images are now handled by JavaScript utilities
+ * See src/utils/imageUtils.js for responsive image management
+ * 
+ * This file is kept for any additional project-specific styles that may be needed
+ */
